Начал работу над шапкой

--- a/index.html
+++ b/index.html
@@ -23,12 +23,98 @@
   <!-- Шапка  -->
   <header class="header">
     <div class="wrapper">
+      <div class="header__grid">
+        <div class="header__left">
+          <div class="logo">
+            <a class="logo__ link" href="#">
+              <img class="logo__ link" src="./svg/logotype.svg" alt="#" loading="lazy">
+            </a>
+            <span class="logo__label">Агрегатор досуга, отдыха<br>
+              и развлечений. Без интима 18+</span>
+          </div>
+        </div>
 
+        <div class="header__center">
+          <nav class="navigation">
+            <ul class="navigation__list list-reset">
+              <li class="navigation__item">
+                <a href="#" class="navigation__link">
+                  <span>Преимущества</span>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="#" class="navigation__link">
+                  <span>Как это работает?</span>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="#" class="navigation__link">
+                  <span>Отзывы</span>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="#" class="navigation__link">
+                  <span>Цены</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="header__right">
+          <a href="#" class="button button--mod"><span>Заказать консультацию</span></a>
+          <!-- Кнопка меню  -->
+          <button class="menu-button" title="Открыть выпадающее меню" type="button">
+            <span class="menu-button__border"></span>
+          </button>
+        </div>
+      </div>
     </div>
   </header>
   <!-- мобильное меню  -->
   <section class="mobile-nav">
     <div class="wrapper">
+      <div class="mobile-nav__body">
+        <nav>
+          <ul class="mobile-nav__list list-reset">
+            <li class="mobile-nav__item">
+              <a href="#" class="mobile-nav__link">
+                <span>Преимущества</span>
+              </a>
+            </li>
+            <li class="mobile-nav__item">
+              <a href="#" class="mobile-nav__link">
+                <span>Как это работает?</span>
+              </a>
+            </li>
+            <li class="mobile-nav__item">
+              <a href="#" class="mobile-nav__link">
+                <span>Отзывы</span>
+              </a>
+            </li>
+            <li class="mobile-nav__item">
+              <a href="#" class="mobile-nav__link">
+                <span>Цены</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="mobile-nav__footer">
+        <ul class="social-list list-reset">
+          <li class="social-list__item">
+            <a href="#" class="social-list__link"><span>Telegram-канал</span></a>
+          </li>
+          <li class="social-list__item">
+            <a href="#" class="social-list__link"><span>WhatsApp</span></a>
+          </li>
+        </ul>
+
+        <a href="#" class="button button--mod"><span>Заказать консультацию</span></a>
+
+        <a href="#" class="button"><span>Оставить заявку</span></a>
+      </div>
 
     </div>
   </section>
@@ -40,6 +126,8 @@
         <h2 class="title">Ищете <span>мастеров</span>
           или <span>администраторов</span> для вашего салона?
           Мы поможем!</h2>
+
+          <a href="#" class="button"><span>Оставить заявку</span></a>
       </div>
     </section>
 
