начал работу над первым экраном и доработал шапку сайта

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="header__grid">
         <div class="header__left">
           <div class="logo">
-            <a class="logo__ link" href="#">
+            <a class="logo__link" href="#">
               <img class="logo__ link" src="./svg/logotype.svg" alt="#" loading="lazy">
             </a>
             <span class="logo__label">Агрегатор досуга, отдыха<br>
@@ -123,11 +123,20 @@
     <!-- Первый экран  -->
     <section class="hero">
       <div class="wrapper">
+        <div class="hero__content">
         <h2 class="title">Ищете <span>мастеров</span>
           или <span>администраторов</span> для вашего салона?
           Мы поможем!</h2>
 
+          <div class="best-masters">
+            <img class="best-masters__photo" src="./img/hero/best-masters.png" alt="#">
+            <img class="best-masters__icon" src="./img/hero/xoxo.svg" alt="#">
+          </div>
+
+          <p class="hero__text">Подберем <b>лучших</b><i class="heart"></i><b>специалистов</b> для вашего салона эротического массажа</p>
+
           <a href="#" class="button"><span>Оставить заявку</span></a>
+        </div>
       </div>
     </section>
 
@@ -259,7 +268,7 @@
 
   <!-- кастомные скрипты  -->
   <script src="./js/parts/header-sticky.js"></script>
-  <script src="./js/parts/just-main-margin.js"></script>
+  <!-- <script src="./js/parts/just-main-margin.js"></script> -->
   <script src="./js/parts/mobile-nav-open.js"></script>
   <script src="./js/parts/modals.js"></script>
   <script src="./js/parts/form-validation.js"></script>
