Продолжение разметки и стилизации секций

--- a/index.html
+++ b/index.html
@@ -124,16 +124,17 @@
     <section class="hero">
       <div class="wrapper">
         <div class="hero__content">
-        <h2 class="title">Ищете <span>мастеров</span>
-          или <span>администраторов</span> для вашего салона?
-          Мы поможем!</h2>
+          <h2 class="title">Ищете <span>мастеров</span>
+            или <span>администраторов</span> для вашего салона?
+            Мы поможем!</h2>
 
           <div class="best-masters">
             <img class="best-masters__photo" src="./img/hero/best-masters.png" alt="#">
             <img class="best-masters__icon" src="./img/hero/xoxo.svg" alt="#">
           </div>
 
-          <p class="hero__text">Подберем <b>лучших</b><i class="heart"></i><b>специалистов</b> для вашего салона эротического массажа</p>
+          <p class="hero__text">Подберем <b>лучших</b><i class="heart"></i><b>специалистов</b> для вашего салона
+            эротического массажа</p>
 
           <a href="#" class="button"><span>Оставить заявку</span></a>
         </div>
@@ -142,25 +143,133 @@
 
     <div class="sections-group">
       <!-- Почему выбирают нас  -->
-      <section class="advantages">
+      <section class="advantages section">
         <div class="wrapper">
-          <h2 class="title">Почему выбирают нас?</h2>
-          <p>Мы знаем все тонкости индустрии мужских спа и салонов эротического массажа. Наш опыт помогает находить
-            мастеров, которые точно подойдут вашему салону.</p>
+
+          <div class="section__header">
+            <div class="section__header-col">
+              <span class="section-label">01 / преимущества</span>
+              <h2 class="title">Почему<br>выбирают нас?</h2>
+              <p class="section__subtitle">Мы знаем все тонкости индустрии мужских<i class="heart heart--red"></i>спа и салонов эротического
+                массажа. Наш опыт помогает находить
+                мастеров, которые точно подойдут вашему салону.</p>
+            </div>
+          </div>
+          <div class="section__body">
+            <ul class="section__card-group">
+
+              <article class="card-item">
+                <span class="card-item__image">
+                  <img src="./img/card-item/1.png" alt="#" loading="lazy">
+                </span>
+              </article>
+
+              <article class="card-item">
+                <span class="card-item__image">
+                  <img src="./img/card-item/2.png" alt="#" loading="lazy">
+                </span>
+              </article>
+
+              <article class="card-item">
+                <span class="card-item__image">
+                  <img src="./img/card-item/3.png" alt="#" loading="lazy">
+                </span>
+              </article>
+
+
+            </ul>
+          </div>
         </div>
       </section>
       <!-- Как происходит подбор мастеров  -->
-      <section class="steps">
+      <section class="steps section">
         <div class="wrapper">
-          <h2 class="title"><span>Как</span> происходит
-            подбор мастеров?</h2>
+
+          <div class="section__header">
+            <div class="section__header-col">
+              <span class="section-label">02 / процесс найма</span>
+              <h2 class="title"><span>Как</span> происходит <br>
+                подбор мастеров?</h2>
+              <p class="section__subtitle">Мы обеспечим быстрый и качественный процесс найма, <br>который сэкономит ваше время и гарантирует результат.</p>
+            </div>
+          </div>
+          <div class="section__body">
+            <ul class="section__card-group section__card-group--right">
+
+              <article class="card-item card-item--mini">
+                <span class="card-item__image">
+                  <img src="./img/card-item/4.png" alt="#" loading="lazy">
+                </span>
+              </article>
+              <article class="card-item card-item--mini">
+                <span class="card-item__image">
+                  <img src="./img/card-item/5.png" alt="#" loading="lazy">
+                </span>
+              </article>
+
+
+
+            </ul>
+
+            <ul class="section__card-group section__card-group--left">
+
+              <article class="card-item card-item--mini">
+                <span class="card-item__image">
+                  <img src="./img/card-item/6.png" alt="#" loading="lazy">
+                </span>
+              </article>
+              <article class="card-item card-item--mini">
+                <span class="card-item__image">
+                  <img src="./img/card-item/7.png" alt="#" loading="lazy">
+                </span>
+              </article>
+              <article class="card-item card-item--mini">
+                <span class="card-item__image">
+                  <img src="./img/card-item/8.png" alt="#" loading="lazy">
+                </span>
+              </article>
+
+
+
+            </ul>
+          </div>
+
         </div>
       </section>
       <!-- Отзывы наших довольных клиентов -->
-      <section class="reviews">
+      <section class="reviews section">
         <div class="wrapper">
-          <h2 class="title">Отзывы наших довольных клиентов</h2>
-          <p>Отзывы тех, кто уже доверил нам подбор мастеров для своих салонов.</p>
+
+          <div class="section__header">
+            <div class="section__header-col">
+              <span class="section-label">03 / отзывы</span>
+              <h2 class="title">Отзывы наших довольных клиентов</h2>
+              <p class="section__subtitle">Отзывы тех, кто уже доверил нам подбор мастеров для своих салонов.</p>
+            </div>
+          </div>
+          <div class="section__body">
+            <div class="reviews__grid">
+              <div class="reviews__col-left">
+                <div class="reviews__slider-big">
+                  <img src="./img/reviews/slider-big-photo-1.png" alt="#">
+                </div>
+              </div>
+              <div class="reviews__col-right">
+                <div class="reviews__slider-text">
+                  <article>
+                    <span>#1</span>
+                    <h3>Cпа салон «Красная Роза»</h3>
+                    <cite>«Мы любим животных и стараемся поддерживать тех из них, кому не посчастливилось иметь ласковых хозяев и тёплый кров. Один из проверенных способов это сделать — помочь благотворительному фонду <a href="#">«Луч Добра»</a>. Благодаря их труду ежегодно сотни питомцев находят свой новый дом.»</cite>
+                  </article>
+                </div>
+                <div class="reviews__slider-min">
+                  <img src="./img/reviews/slider-mini-photo-2.png" alt="#">
+                  <img src="./img/reviews/slider-mini-photo-3.png" alt="#">
+                  <img src="./img/reviews/slider-mini-photo-4.png" alt="#">
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
