--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
             <div class="section__header-col">
               <span class="section-label">01 / преимущества</span>
               <h2 class="title">Почему<br>выбирают нас?</h2>
-              <p class="section__subtitle">Мы знаем все тонкости индустрии мужских<i class="heart heart--red"></i>спа и салонов эротического
+              <p class="section__subtitle">Мы знаем все тонкости индустрии мужских<i class="heart heart--red"></i>спа и
+                салонов эротического
                 массажа. Наш опыт помогает находить
                 мастеров, которые точно подойдут вашему салону.</p>
             </div>
@@ -190,7 +191,8 @@
               <span class="section-label">02 / процесс найма</span>
               <h2 class="title"><span>Как</span> происходит <br>
                 подбор мастеров?</h2>
-              <p class="section__subtitle">Мы обеспечим быстрый и качественный процесс найма, <br>который сэкономит ваше время и гарантирует результат.</p>
+              <p class="section__subtitle">Мы обеспечим быстрый и качественный процесс найма, <br>который сэкономит ваше
+                время и гарантирует результат.</p>
             </div>
           </div>
           <div class="section__body">
@@ -259,7 +261,10 @@
                   <article>
                     <span>#1</span>
                     <h3>Cпа салон «Красная Роза»</h3>
-                    <cite>«Мы любим животных и стараемся поддерживать тех из них, кому не посчастливилось иметь ласковых хозяев и тёплый кров. Один из проверенных способов это сделать — помочь благотворительному фонду <a href="#">«Луч Добра»</a>. Благодаря их труду ежегодно сотни питомцев находят свой новый дом.»</cite>
+                    <cite>«Мы любим животных и стараемся поддерживать тех из них, кому не посчастливилось иметь ласковых
+                      хозяев и тёплый кров. Один из проверенных способов это сделать — помочь благотворительному
+                      фонду <a href="#">«Луч Добра»</a>. Благодаря их труду ежегодно сотни питомцев находят свой новый
+                      дом.»</cite>
                   </article>
                 </div>
                 <div class="reviews__slider-min">
@@ -274,18 +279,134 @@
       </section>
     </div>
     <!-- Услуги и цены  -->
-    <section class="services">
+    <section class="services section">
       <div class="wrapper">
-        <h2 class="title"><span>Услуги</span> и цены</h2>
-        <p>Выберите оптимальный тариф для вашего салона и получите качественный подбор персонала.</p>
+
+        <div class="section__header">
+          <div class="section__header-col">
+            <span class="section-label">04 / пакеты</span>
+            <h2 class="title"><span>Услуги</span> и цены</h2>
+            <p class="section__subtitle">Выберите оптимальный тариф для вашего салона и получите качественный подбор
+              персонала.</p>
+          </div>
+        </div>
+        <div class="section__body">
+
+          <div class="services__list">
+
+            <article class="service-card">
+              <div class="service-card__header">
+                <div class="service-card__wrapper">
+                  <h3 class="service-card__title">Стандартный<br>
+                    найм</h3>
+                  <ul class="service-card__price-list list-reset">
+                    <li>1 мастер — 50 000 руб.</li>
+                    <li>1 администратор — 90 000 руб.</li>
+                    <li>От двух сотрудников — скидка 15%.</li>
+                  </ul>
+                </div>
+              </div>
+              <h4 class="service-card__subtitle">
+                <svg width="21" height="15" viewBox="0 0 21 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M19.1441 6.37387C16.3986 6.37387 13.8964 3.87387 13.8964 1.12613V0H11.6441V1.12613C11.6441 3.12387 12.5203 4.99775 13.8953 6.37387H0V8.62613H13.8953C12.5203 10.0023 11.6441 11.8761 11.6441 13.8739V15H13.8964V13.8739C13.8964 11.1273 16.3986 8.62613 19.1441 8.62613H20.2703V6.37387H19.1441Z"
+                    fill="#F5F5F5" />
+                </svg>
+
+                <span>Что входит в услугу?</span>
+              </h4>
+              <div class="service-card__wrapper">
+                <ul class="service-card__details-list list-reset">
+                  <li><b>Полный цикл подбора специалистов:</b><br>
+                    от поиска кандидатов до их выходана работу.</li>
+                  <li><b>Полное сопровождение на всех этапах найма и адаптации сотрудников.</b></li>
+                  <li><b>Бесплатная замена сотрудника в течение 1 месяца при увольнении (включает до 5 мастеров и до 2
+                      администраторов).</b></li>
+                </ul>
+
+                <a class="button" href="#"><span>Выбрать тариф</span></a>
+                <div class="service-card__wrapper">
+
+            </article>
+
+            <article class="service-card service-card--mod">
+              <div class="service-card__header">
+                <div class="service-card__wrapper">
+                  <div class="service-card__container">
+                    <h3 class="service-card__title">Формирование<br>
+                      штата сотрудников</h3>
+                    <p class="service-card__text">Полное решение «под ключ» для одного салона: <a href="#">стоимость
+                        индивидуальная</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <h4 class="service-card__subtitle">
+                <svg width="21" height="15" viewBox="0 0 21 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M19.1441 6.37387C16.3986 6.37387 13.8964 3.87387 13.8964 1.12613V0H11.6441V1.12613C11.6441 3.12387 12.5203 4.99775 13.8953 6.37387H0V8.62613H13.8953C12.5203 10.0023 11.6441 11.8761 11.6441 13.8739V15H13.8964V13.8739C13.8964 11.1273 16.3986 8.62613 19.1441 8.62613H20.2703V6.37387H19.1441Z"
+                    fill="#F5F5F5" />
+                </svg>
+                <span>Что входит в услугу?</span>
+              </h4>
+
+              <div class="service-card__wrapper">
+                <div class="service-card__container">
+                  <ul class="service-card__details-list list-reset">
+                    <li><b>Комплексный найм всех необходимых специалистов для вашего салона.</b></li>
+                    <li><b>Полный контроль на всех этапах:</b> от поиска кандидатов до их трудоустройства.</li>
+                    <li><b>Сопровождение на этапе адаптации новых сотрудников для быстрой интеграции в коллектив.</b>
+                    </li>
+                    <li><b>Бесплатная замена в случае увольнения
+                        в течение первого месяца</b> (до 5 мастеров и до 2 администраторов).</li>
+                  </ul>
+                </div>
+                <a class="button" href="#"><span>Выбрать тариф</span></a>
+              </div>
+
+
+
+            </article>
+          </div>
+        </div>
+
       </div>
     </section>
     <!-- Готовы найти мастеров  -->
-    <section class="call-to-action">
+    <section class="call-to-action section">
       <div class="wrapper">
-        <h2 class="title">Готовы
-          найти мастеров?</h2>
-        <p>Заполните форму, и мы свяжемся с вами для уточнения всех деталей в ближайшее время</p>
+
+        <div class="section__header">
+          <div class="section__header-col">
+            <span class="section-label">02 / процесс найма</span>
+            <h2 class="title">Готовы<br>
+              найти мастеров?</h2>
+            <p class="section__subtitle">Заполните форму, и мы свяжемся с вами для уточнения всех деталей в ближайшее
+              время</p>
+            <div class="call-to-action__form">
+              <div class="form">
+                <form action="#">
+                  <div class="form__grid">
+                    <div class="form__item">
+                      <input type="text" name="user-name" id="" placeholder="Введите свое имя">
+                    </div>
+                    <div class="form__item">
+                      <input type="tel" name="user-phone" id="" placeholder="+7 (987) 654-32-10">
+                    </div>
+                    <div class="form__item">
+                      <input type="email" name="user-email" id="" placeholder="Введите свой E-Mail">
+                    </div>
+                  </div>
+                  <button class="button button--red" type="button">Оставить заявку</button>
+
+                  <p class="info">Нажимая на кнопку, вы соглашаетесь с условиями <a href="#" target="_blank">Политики
+                      конфиденциальности</a> и <a href="#" target="_blank">Обработки персональных данных</a></p>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
